스웨거 수정
