# src/docs/swagger.yaml
@@ -9,9 +9,12 @@ info:
 
 servers:
   - url: http://localhost:3000
+    description: Local
+  - url: http://3.38.191.18:3000
+    description: Production
 
 paths:
-  /:
+  /extensions:
     get:
       summary: 전체 확장자 목록 조회
       description: 고정 확장자 및 커스텀 확장자 목록 조회
